archivos-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devsuprueba
  name: devsuprueba-service
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: devsuprueba-app
